--- a/templates/home.html
+++ b/templates/home.html
@@ -15,8 +15,8 @@
                 the books from author
                 <a href="https://twitter.com/Rubberbandits?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor">
                     Blindboy Boatclub. </a> The Yurt Index is open to everyone. If you know some wicked Irish lingo,
-                    if you want to edit a word that's not quite right, add an alternative spelling or definition or 
-                    perhaps add another use; <a href="#">click here to register!</a>
+                if you want to edit a word that's not quite right, add an alternative spelling or definition or
+                perhaps add another use; <a href="#">click here to register!</a>
             </p>
         </div>
     </div>
@@ -69,6 +69,9 @@
                             </div>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
     </div>
 
 {% endblock %}
