--- a/templates/new_word.html
+++ b/templates/new_word.html
@@ -92,7 +92,7 @@
 
             <!-- word use -->
             <div class="input-field new-word-input col s12">
-                <input name="use" id="use" type="text" class="validate" required>
+                <textarea name="use" id="use" type="text" class="validate materialize-textarea" required></textarea>
                 <label for="use" class="input-field-name">Example</label>
             </div>
 
