Fix error where 'rating' attribute wouldn't update properly on edit

--- a/templates/word-page.html
+++ b/templates/word-page.html
@@ -20,7 +20,7 @@
                 </span>
 
                 <!-- alternate definitions check -->
-                {% if word.hasAltDefenitions %}
+                {% if word.hasAltDefinitions %}
                     <h6><strong>Definitions:</strong></h6>
                     <ul class="definitions-list">
                         <li> {{ word.meaning }} </li>
