--- a/templates/edit_word.html
+++ b/templates/edit_word.html
@@ -4,7 +4,7 @@
     <h3 class="center main-heading">Edit a Word</h3>
 
     <div class="row card-panel">
-        <form class="col s12" method="POST" action="{{ url_for('new_word') }}">
+        <form class="col s12" method="POST" action="{{ url_for('edit_word', word_Id=word._id) }}">
             <!-- word name -->
             <div class="input-field new-word-input col s12">
                 <input name="name" id="name" type="text" class="validate" value="{{ word.name.capitalize() }}" required>
