Fix error where uses weren't being added

--- a/templates/edit_word.html
+++ b/templates/edit_word.html
@@ -114,28 +114,23 @@
                 <div class="modal-content">
                     <h4>Other Examples</h4>
                     <div class="input-field">
-                        <textarea name="alt_use_1" id="alt_use_1" type="text" class="materialize-textarea">
-                            {{ word.uses[1] }}</textarea>
+                        <textarea name="alt_use_1" id="alt_use_1" type="text" class="materialize-textarea">{{ word.uses[1] }}</textarea>
                         <label for="alt_use_1">New example 1</label>
                     </div>
                     <div class="input-field">
-                        <textarea name="alt_use_2" id="alt_use_2" type="text" class="materialize-textarea">
-                            {{ word.uses[2] }}</textarea>
+                        <textarea name="alt_use_2" id="alt_use_2" type="text" class="materialize-textarea">{{ word.uses[2] }}</textarea>
                         <label for="alt_use_2">New example 2</label>
                     </div>
                     <div class="input-field">
-                        <textarea name="alt_use_3" id="alt_use_3" type="text" class="materialize-textarea">
-                            {{ word.uses[3] }}</textarea>
+                        <textarea name="alt_use_3" id="alt_use_3" type="text" class="materialize-textarea">{{ word.uses[3] }}</textarea>
                         <label for="alt_use_3">New example 3</label>
                     </div>
                     <div class="input-field">
-                        <textarea name="alt_use_4" id="alt_use_4" type="text" class="materialize-textarea">
-                            {{ word.uses[4] }}</textarea>
+                        <textarea name="alt_use_4" id="alt_use_4" type="text" class="materialize-textarea">{{ word.uses[4] }}</textarea>
                         <label for="alt_use_4">New example 4</label>
                     </div>
                     <div class="input-field">
-                        <textarea name="alt_use_5" id="alt_use_5" type="text" class="materialize-textarea">
-                            {{ word.uses[5] }}</textarea>
+                        <textarea name="alt_use_5" id="alt_use_5" type="text" class="materialize-textarea">{{ word.uses[5] }}</textarea>
                         <label for="alt_use_5">New example 5</label>
                     </div>
                 </div>
