Add home link to navbar logo

--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
         <!-- main navbar -->
         <nav>
             <div class="green darken-1 nav-wrapper">
-                <a href="#!" class="center brand-logo">Yurt Index</a>
+                <a href="{{ url_for('home_page') }}" class="center brand-logo">Yurt Index</a>
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i
                         class="material-icons nav-icon">menu</i></a>
                 <ul class="right hide-on-med-and-down">
