Capitalize words as they're added to the database

--- a/templates/home.html
+++ b/templates/home.html
@@ -21,6 +21,8 @@
         </div>
     </div>
 
+    <h4 class="center main-heading">Featured Words</h4>
+
     <div class="row featured-words">
         <div class="col s12 m6">
             <div class="card green darken-1">
