Style mobile navbar

--- a/templates/base.html
+++ b/templates/base.html
@@ -28,16 +28,28 @@
                 <ul class="right hide-on-med-and-down">
                     <li><a href="{{ url_for('home_page') }}">Home</a></li>
                     <li><a href="{{ url_for('new_word') }}">New Word</a></li>
+                    <li><a href="{{ url_for('all_words') }}">All Words</a></li>
                     <li><a href="mobile.html">Mobile</a></li>
                 </ul>
             </div>
         </nav>
         <!-- mobile sidenav -->
-        <ul class="green darken-1 sidenav" id="mobile-demo">
+        <ul class="sidenav" id="mobile-demo">
             <li><a href="{{ url_for('home_page') }}">Home</a></li>
             <li><a href="{{ url_for('new_word') }}">New Word</a></li>
+            <li><a href="{{ url_for('all_words') }}">All Words</a></li>
             <li><a href="mobile.html">Mobile</a></li>
         </ul>
+        <!-- <div class="row green darken-1">
+            <form class="col center offset-m3 s12 m6" id="navSearch">
+                <div class="input-field search-container white">
+                  <i class="material-icons prefix">mode_edit</i>
+                  <textarea id="icon_prefix2" class="materialize-textarea center"></textarea>
+                  <label for="icon_prefix2">First Name</label>
+                </div>
+              </div>
+            </form>
+          </div> -->
     </header>
 
     <section>
