--- a/templates/all_words.html
+++ b/templates/all_words.html
@@ -1,4 +1,20 @@
 {% extends "base.html" %}
 {% block content %}
-    <h3>hello</h3>
+
+    <h3 class="center main-heading">All Words</h3>
+    <div class="row all-words-container">
+        {% for word in words %}
+        <div class="col s12 m6">
+            <div class="card green darken-1">
+                <div class="card-content white-text">
+                    <span class="card-title"><strong>{{ word.name }}</strong></span>
+                    <p>{{ word.meaning }}</p>
+                </div>
+                <div class="card-action">
+                    <a href="{{ url_for('word_page', word_Id=word._id) }}">Click here to find out more!</a>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
 {% endblock %}
