Add basic search bar to base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -40,16 +40,16 @@
             <li><a href="{{ url_for('all_words') }}">All Words</a></li>
             <li><a href="mobile.html">Mobile</a></li>
         </ul>
-        <!-- <div class="row green darken-1">
-            <form class="col center offset-m3 s12 m6" id="navSearch">
+        <div class="row green darken-1">
+            <form class="col offset-m3 s12 m6" id="navSearch">
                 <div class="input-field search-container white">
                   <i class="material-icons prefix">mode_edit</i>
-                  <textarea id="icon_prefix2" class="materialize-textarea center"></textarea>
+                  <textarea id="icon_prefix2" class="materialize-textarea"></textarea>
                   <label for="icon_prefix2">First Name</label>
                 </div>
               </div>
             </form>
-          </div> -->
+          </div>
     </header>
 
     <section>
