Style and label search bar

--- a/templates/base.html
+++ b/templates/base.html
@@ -43,9 +43,9 @@
         <div class="row green darken-1">
             <form class="col offset-m3 s12 m6" id="navSearch">
                 <div class="input-field search-container white">
-                  <i class="material-icons prefix">mode_edit</i>
-                  <textarea id="icon_prefix2" class="materialize-textarea"></textarea>
-                  <label for="icon_prefix2">First Name</label>
+                  <i class="material-icons prefix">search</i>
+                  <input id="search" type="text" name="search">
+                  <label for="search">Search</label>
                 </div>
               </div>
             </form>
