--- a/templates/base.html
+++ b/templates/base.html
@@ -41,15 +41,15 @@
             <li><a href="mobile.html">Mobile</a></li>
         </ul>
         <div class="row green darken-1">
-            <form class="col offset-m3 s12 m6" id="navSearch">
-                <div class="input-field search-container white">
-                  <i class="material-icons prefix">search</i>
-                  <input id="search" type="text" name="search">
-                  <label for="search">Search</label>
+            <form action="{{ url_for('search') }}" method="post" class="col offset-m3 s12 m6" id="navSearch">
+                <div class="input-field search-container white">                    
+                    <i class="material-icons prefix">search</i>
+                    <input id="search" type="text" name="search">
+                    <label for="search">Search</label>
+                    <button type="submit">Search</button>
                 </div>
-              </div>
             </form>
-          </div>
+        </div>
     </header>
 
     <section>
