--- a/templates/register.html
+++ b/templates/register.html
@@ -7,6 +7,7 @@
             <div class="card-panel">
                 <!-- username -->
                 <div class="row">
+                    <span>Pick a Username:</span>
                     <div class="input-field col s12">
                         <i class="material-icons prefix">person_add</i>                  
                         <input id="username" name="username" type="text" minlength="5" maxlength="15"
@@ -17,10 +18,27 @@
                 <!-- email -->
                 <div class="row">
                     <div class="input-field col s12">
-                        <i class="material-icons prefix">email</i>                  
+                        <i class="material-icons prefix">mail_outline</i>                  
                         <input id="email" name="email" type="email" minlength="5" maxlength="50"
                             class="validate" required>
                         <label for="email">Email</label>                        
+                    </div>
+                </div>
+                <!-- confirm email -->
+                <div class="row">
+                    <div class="input-field col s12">
+                        <i class="material-icons prefix">mail</i>                  
+                        <input id="confirm_email" name="confirm_email" type="email" minlength="5" maxlength="50"
+                            class="validate" required>
+                        <label for="confirm_email">Confirm Email</label>                     
+                    </div>
+                </div>
+                <!-- date of birth -->
+                <div class="row">
+                    <div class="input-field col s12">
+                        <i class="material-icons prefix">date_range</i>                  
+                        <input id="date_of_birth" name="date_of_birth" type="text" class="datepicker" required>
+                        <label for="date_of_birth">Date of Birth</label>                     
                     </div>
                 </div>
                 <!-- password -->
