Add instructions class and some style to register form

--- a/templates/register.html
+++ b/templates/register.html
@@ -7,7 +7,7 @@
             <div class="card-panel">
                 <!-- username -->
                 <div class="row">
-                    <span>Pick a Username:</span>
+                    <span class="form-instruction">Pick a Username:</span>
                     <div class="input-field col s12">
                         <i class="material-icons prefix">person_add</i>                  
                         <input id="username" name="username" type="text" minlength="5" maxlength="15"
