Add instructions to appropriate elements in the register form

--- a/templates/register.html
+++ b/templates/register.html
@@ -17,11 +17,12 @@
                 </div>
                 <!-- email -->
                 <div class="row">
+                    <span class="form-instruction">Enter your Email Address:</span>
                     <div class="input-field col s12">
                         <i class="material-icons prefix">mail_outline</i>                  
                         <input id="email" name="email" type="email" minlength="5" maxlength="50"
                             class="validate" required>
-                        <label for="email">Email</label>                        
+                        <label for="email">Email</label>                    
                     </div>
                 </div>
                 <!-- confirm email -->
@@ -35,6 +36,7 @@
                 </div>
                 <!-- date of birth -->
                 <div class="row">
+                    <span class="form-instruction">Enter Your Date of Birth:</span>
                     <div class="input-field col s12">
                         <i class="material-icons prefix">date_range</i>                  
                         <input id="date_of_birth" name="date_of_birth" type="text" class="datepicker" required>
@@ -43,6 +45,7 @@
                 </div>
                 <!-- password -->
                 <div class="row">
+                    <span class="form-instruction">Choose a Password:</span>
                     <div class="input-field col s12">
                         <i class="material-icons prefix">lock_outline</i>                  
                         <input id="password" name="password" type="password" minlength="5" maxlength="25"
