--- a/templates/register.html
+++ b/templates/register.html
@@ -3,7 +3,7 @@
     <h3 class="center main-heading">Register an Account</h3>
 
     <div class="row">
-        <form class="col s12 m8 offset-m2">
+        <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('register') }}">
             <div class="card-panel">
                 <!-- username -->
                 <div class="row">
@@ -61,6 +61,9 @@
                             class="validate" required>
                         <label for="confirm_password">Confirm Password</label>                        
                     </div>
+                </div>
+                <div class="row">
+                    <button type="submit" class="btn-large right deep-purple lighten-1">REGISTER</button>
                 </div>
             </div>
         </form>
