Add some baisc styling and elements to profile.html

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,8 +1,14 @@
 {% extends "base.html" %}
 {% block content %}
-
-<div class="user-image-container s12 m6 l4">
-    <img src="static/images/user-image.png" alt="an image of a user icon">
+<div class="row">
+    <div class="user-image-container col s12 m4">
+        <img src="static/images/user_image.png" alt="an image of a user icon" class="user-image-icon">
+        <span>Mike</span>
+        <span>place@holder.com</span>
+    </div>
+    <div class="col s12 m7 basic-user-info">
+        
+    </div>
 </div>
 
 {% endblock %}
