Add edit and delete profile buttons to profile.html

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -10,8 +10,9 @@
         </div>
         
     </div>
-    <div class="col s12 m7 basic-user-info">
-
+    <div class="col s12 m5 basic-user-info">
+        <a href="#" class="btn-large deep-purple lighten-1">Edit Your Profile</a>
+        <a href="#" class="btn-large red text-white">Delete Your Profile</a>
     </div>
 </div>
 
