--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="row">
-    <div class="basic-user-info-container col s12 m6">
+<div class="row basic-user-info-container">
+    <div class="col s12 m6 image-info">
         <img src="static/images/user_image.png" alt="an image of a user icon" class="user-image-icon">
         <div class="basic-user-info">
             <span>Mike</span><br>
@@ -10,7 +10,7 @@
         </div>
         
     </div>
-    <div class="col s12 m5 basic-user-info">
+    <div class="col s12 m6 user-buttons">
         <a href="#" class="btn-large deep-purple lighten-1">Edit Your Profile</a>
         <a href="#" class="btn-large red text-white">Delete Your Profile</a>
     </div>
