--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
+
+<h3 class="center main-heading" id="userProfileHeading">User's Profile</h3>
+
 <div class="row basic-user-info-container">
     <div class="col s12 m6 image-info">
         <img src="static/images/user_image.png" alt="an image of a user icon" class="user-image-icon">
@@ -8,11 +11,19 @@
             <span>place@holder.com</span><br>
             <span>Joined: <span id="profile-date-joined"> 00/00/00</span></span>
         </div>
-        
+
     </div>
     <div class="col s12 m6 user-buttons">
         <a href="#" class="btn-large deep-purple lighten-1">Edit Your Profile</a>
         <a href="#" class="btn-large red text-white">Delete Your Profile</a>
+    </div>
+</div>
+<div class="row">
+    <div class="col center-align s12 user-description">
+        <h4 class="center main-heading">About User</h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium nobis excepturi debitis incidunt illum
+            impedit libero odit consectetur accusamus molestias at magnam ex, consequuntur non harum in dolore!
+            Dignissimos, pariatur.</p>
     </div>
 </div>
 
