--- a/templates/profile.html
+++ b/templates/profile.html
@@ -26,5 +26,16 @@
             Dignissimos, pariatur.</p>
     </div>
 </div>
+<div class="row">
+    <div class="col s12">
+        <ul class="tabs">
+            <li class="tab col s6"><a href="#test1">Words Created</a></li>
+            <li class="tab col s6"><a href="#test2">Words Edited</a></li>
+            
+        </ul>
+    </div>
+    <div id="test1" class="col s12">Test 1</div>
+    <div id="test2" class="col s12">Test 2</div>
+</div>
 
 {% endblock %}
