Fix error where word uses were displaying with extra quotation marks

--- a/templates/word-page.html
+++ b/templates/word-page.html
@@ -42,7 +42,7 @@
                         {% endfor %}
                     </ul>
                 {% else %}
-                    <p> "{{ word.uses[0] }}" </p>
+                    <p> {{ word.uses[0] }} </p>
                 {% endif %}
 
                 <!-- display who created the word and when -->
