--- a/templates/profile.html
+++ b/templates/profile.html
@@ -32,13 +32,29 @@
 <div class="row">
     <div class="col s12">
         <ul class="tabs">
-            <li class="tab col s6"><a href="#test1">Words Created</a></li>
-            <li class="tab col s6"><a href="#test2">Words Edited</a></li>
+            <li class="tab col s6"><a href="#createdWords">Words Created</a></li>
+            <li class="tab col s6"><a href="#editedWords">Words Edited</a></li>
 
         </ul>
     </div>
-    <div id="test1" class="col s12">Test 1</div>
-    <div id="test2" class="col s12">Test 2</div>
+    <div id="createdWords" class="col s12">
+        {% for word in created_words %}
+            <div class="row">
+                <div class="col s6">
+                    <div class="card green darken-1">
+                        <div class="card-content white-text">
+                            <span class="card-title"><strong>{{ word.name }}</strong></span>
+                            <p>{{ word.meaning }}</p>
+                        </div>
+                        <div class="card-action">
+                            <a href="{{ url_for('word_page', word_Id=word._id) }}">Click here to find out more!</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        {% endfor %}
+    </div>
+    <div id="editedWords" class="col s12">Test 2</div>
 </div>
 
 {% endblock %}
