--- a/templates/base.html
+++ b/templates/base.html
@@ -29,8 +29,8 @@
                     <li><a href="{{ url_for('home_page') }}">Home</a></li>
                     <li><a href="{{ url_for('all_words') }}">All Words</a></li>
                     {% if session.user %}
-                        <li><a href="{{ url_for('new_word') }}">New Word</a></li>
-                        
+                        <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
+                        <li><a href="{{ url_for('new_word') }}">New Word</a></li>                        
                         <li><a href="{{ url_for('log_out') }}">Log Out</a></li>
                     {% else %}
                         <li><a href="{{ url_for('log_in') }}">Log In</a></li>
@@ -44,8 +44,8 @@
             <li><a href="{{ url_for('home_page') }}">Home</a></li>
             <li><a href="{{ url_for('all_words') }}">All Words</a></li>
             {% if session.user %}
-                <li><a href="{{ url_for('new_word') }}">New Word</a></li>
-                
+               <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li> 
+               <li><a href="{{ url_for('new_word') }}">New Word</a></li>                
                 <li><a href="{{ url_for('log_out') }}">Log Out</a></li>
             {% else %}
                 <li><a href="{{ url_for('log_in') }}">Log In</a></li>
