--- a/templates/profile.html
+++ b/templates/profile.html
@@ -59,7 +59,7 @@
     <div id="editedWords" class="col s12">
         {% for word in edited_words %}
             <div class="row">
-                <div class="col s6">
+                <div class="col right s6">
                     <div class="card green darken-1">
                         <div class="card-content white-text">
                             <span class="card-title"><strong>{{ word.name }}</strong></span>
