--- a/templates/profile.html
+++ b/templates/profile.html
@@ -14,7 +14,7 @@
 
     </div>
     <div class="col s12 m6 user-buttons">
-        <a href="#" class="btn-large deep-purple lighten-1">Edit Your Profile</a>
+        <a href="{{ url_for('edit_profile') }}" class="btn-large deep-purple lighten-1">Edit Your Profile</a>
         <a href="#" class="btn-large red text-white">Delete Your Profile</a>
     </div>
 </div>
