Add update functionality to the the edit_profile function

--- a/templates/edit_profile.html
+++ b/templates/edit_profile.html
@@ -30,9 +30,9 @@
             <div class="row">
                 <span class="form-instruction">Tell Us About Yourself:</span>
                 <div class="input-field col s12">
-                    <textarea id="personalDescription" name="personalDescription" type="text"
+                    <textarea id="description" name="description" type="text"
                         class="materialize-textarea"></textarea>
-                    <label for="personalDescription">Personal Description</label>
+                    <label for="description">Personal Description</label>
                 </div>
             </div>
         </form>
